--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "classnames": "^2.3.1",
+    "gsap": "^3.10.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.53.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
