--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "clean": "rm -rf ./node_modules",
     "clean-install": "npm run clean && npm install"
   },
@@ -28,23 +28,27 @@
     ]
   },
   "dependencies": {
-    "@craco/craco": "^6.4.3",
     "@headlessui/react": "^1.6.5",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "gsap": "^3.10.4",
+    "nodemailer": "^6.7.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.2",
+    "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
   }
 }
