--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.5",
+    "@projectstorm/react-diagrams": "^6.7.4",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -49,6 +50,5 @@
     "sass": "^1.53.0",
     "typescript": "^4.7.4"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
