--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start --config craco.config.js",
+    "build": "craco build --config craco.config.js",
+    "eject": "craco eject",
     "dev": "yarn validate && yarn start",
     "deploy": "yarn global add serve && serve -s build",
-    "eject": "react-scripts eject",
     "clean": "rm -rf node_modules",
     "clean-install": "yarn clean && yarn install",
     "analyze": "yarn clean && yarn install && yarn build && source-map-explorer 'build/static/js/*.js'",
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^5.38.1",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "craco": "^0.0.3",
     "express": "^4.18.1",
     "gsap": "^3.10.4",
     "nodemailer": "^6.7.7",
@@ -62,6 +63,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "classnames": "^2.3.1",
+    "craco-alias": "^3.0.1",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
