--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "cors": "^2.8.5",
