--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "start": "craco start --config craco.config.js",
     "startServer": "node server.js",
+    "startServerInBg": "systemctl start portfolio",
     "build": "craco build --config craco.config.js",
+    "justDeploy": "yarn global add serve && serve -s build",
+    "deploy": "yarn clean-install && yarn build && yarn startServerInBg && yarn deploy",
     "eject": "craco eject",
     "dev": "yarn validate && yarn start",
-    "deploy": "yarn global add serve && serve -s build",
     "clean": "rm -rf node_modules",
     "clean-install": "yarn clean && yarn install",
     "analyze": "yarn clean && yarn install && yarn build && source-map-explorer 'build/static/js/*.js'",
@@ -38,34 +40,27 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
     "cors": "^2.8.5",
     "craco": "^0.0.3",
+    "craco-alias": "^3.0.1",
     "express": "^4.18.1",
-    "gsap": "^3.10.4",
     "nodemailer": "^6.7.7",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
-    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-multi-carousel": "^2.8.2",
     "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
-    "styled-components": "^5.3.5"
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "^16.11.41",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
-    "@types/styled-components": "^5.1.25",
     "classnames": "^2.3.1",
-    "craco-alias": "^3.0.1",
-    "dotenv": "^16.0.3",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
